--- a/WpfAsistente/VideosFull.xaml
+++ b/WpfAsistente/VideosFull.xaml
@@ -7,7 +7,48 @@
         mc:Ignorable="d"
         Title="VideosFull" Height="300" Width="300"
         Initialized="VideosFull_OnInitialized"
-        Background="{x:Null}"  AllowsTransparency="True" WindowStyle="None" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
+        Background="{x:Null}"  AllowsTransparency="True" 
+        WindowStyle="None" ResizeMode="NoResize" 
+        WindowStartupLocation="CenterScreen">
+    <Window.Resources>
+        <Style x:Key="MyButtonStyle" TargetType="Button">
+            <Setter Property="OverridesDefaultStyle" Value="True"/>
+            <Setter Property="Margin" Value="5"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Border Name="border"
+  BorderThickness="1"
+  Padding="4,2"
+  BorderBrush="Transparent"
+  CornerRadius="3"
+  Background="{TemplateBinding Background}">
+                            <ContentPresenter
+ HorizontalAlignment="Center" VerticalAlignment="Center" />
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter TargetName="border" Property="BorderBrush" Value="Transparent" />
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+            <Style.Triggers>
+                <EventTrigger RoutedEvent="Button.Click">
+                    <EventTrigger.Actions>
+                        <BeginStoryboard>
+                            <Storyboard>
+                                <DoubleAnimation By="-5" Duration="0:0:0.1" Storyboard.TargetProperty="(Button.Height) " AutoReverse="True"/>
+                                <DoubleAnimation By="-5" Duration="0:0:0.1" Storyboard.TargetProperty="(Button.Width)" AutoReverse="True"/>
+                            </Storyboard>
+                        </BeginStoryboard>
+                    </EventTrigger.Actions>
+                </EventTrigger>
+            </Style.Triggers>
+
+        </Style>
+    </Window.Resources>
     <Canvas x:Name="canvasContainer" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Background="#4C0AB5F5">
         <MediaElement x:Name="mediaElement" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Width="100" Height="100" Volume="1">
             <MediaElement.Effect>
@@ -21,7 +62,7 @@
 
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto"/>
-                     
+
                 </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"/>
@@ -30,6 +71,7 @@
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="Auto"/>
+               
                 </Grid.RowDefinitions>
 
                 <Label x:Name="labelFecha"  Grid.Column="0" Grid.Row="0" FontFamily="DINPro" FontWeight="Bold" FontSize="40" Foreground="#FF060606" Content="xxxx" HorizontalAlignment="Center" VerticalAlignment="Center" />
@@ -39,10 +81,12 @@
                 <Canvas x:Name="canvas3"   Grid.Column="0" Grid.Row="3" Background="White" />
                 <Label x:Name="labelnubes"  Grid.Column="0" Grid.Row="4" FontFamily="DINPro" FontWeight="Regular" FontSize="40" Foreground="#FF060606" Content="xxxx" HorizontalAlignment="Center" VerticalAlignment="Center" />
                 <Label x:Name="labelhumedad"  Grid.Column="0" Grid.Row="5" FontFamily="DINPro" FontWeight="Regular" FontSize="40" Foreground="#FF060606" Content="xxxx" HorizontalAlignment="Center" VerticalAlignment="Center" />
-
+                
             </Grid>
         </Border>
-      
+        
+
+
     </Canvas>
 
 
