set 1 browser changed

--- a/WpfAsistente/Browser.xaml
+++ b/WpfAsistente/Browser.xaml
@@ -9,7 +9,7 @@
         ResizeMode="NoResize"
      
         Initialized="Browser_OnInitialized"
-        xmlns:wf="clr-namespace:System.Windows.Forms;assembly=System.Windows.Forms" 
+        xmlns:wf="clr-namespace:System.Windows.Forms;assembly=System.Windows.Forms" xmlns:wpf="clr-namespace:CefSharp.Wpf;assembly=CefSharp.Wpf"
         WindowStyle="None"
         >
 
@@ -78,13 +78,12 @@
                 </Button.Background>
             </Button>
 
-        </Canvas>
+        </Canvas>      
+         
 
-      
-            <WindowsFormsHost Grid.Column="0" Grid.Row="1" x:Name="BrowserFormsHost">
-               <wf:WebBrowser x:Name="browser" ScrollBarsEnabled="True" Visible="True"></wf:WebBrowser>
-            </WindowsFormsHost>
-
+        <Border Grid.Row="1" BorderBrush="Gray" BorderThickness="0,1">
+            <wpf:ChromiumWebBrowser x:Name="browser" />
+        </Border>
         <!--<Canvas x:Name="canvasContainerLine2" Grid.Column="0" Grid.Row="2" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Background="#00175b">
             <Button x:Name="Volver" Content="" Canvas.Right="0" Canvas.Top="0"   Width="179" Height="177" BorderThickness="0" Style="{StaticResource MyButtonStyle}" Opacity="100">
                 <Button.Effect>
