--- a/WpfAsistente/ChromeBrowser.xaml
+++ b/WpfAsistente/ChromeBrowser.xaml
@@ -74,7 +74,7 @@
                 </Button.Effect>
 
                 <Button.Background>
-                    <ImageBrush ImageSource="pack://siteoforigin:,,,/Resources/Volver.png" />
+                    <ImageBrush ImageSource="pack://siteoforigin:,,,/Resources/atrasbrowser.png" />
                 </Button.Background>
             </Button>
             <Button x:Name="Volvermenu" Content="" Canvas.Right="0" Canvas.Top="0"   Width="179" Height="177" BorderThickness="0" Style="{StaticResource MyButtonStyle}" Opacity="100">
